# ai-engineer-prep

./: .gitignore  README.md
langgraph-codes/: README.md  calculator.py  chat_stream.py  chat_threads_memory.py  chat_todo.py  chat_websearch.py  pyproject.toml
travel-agent/: city_extractor.py  main.py  map_utils.py  pyproject.toml  requirements.txt
travel-agent/.chainlit/: config.toml
travel-agent/public/elements/: TripMap.jsx
voice-agent/: README.md  pyproject.toml  requirements.txt  wikipedia_voice_bot.py
voice-todo-app/: .gitignore  README.md  agent.py  agent_tools.py  database.py  deepgram_service.py  logger_config.py  main.py  models.py  pyproject.toml  requirements.txt  todos.db
voice-todo-app/static/: index.html
