[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.2",
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "typing-extensions>=4.8.0",
    "langgraph-checkpoint>=3.0.1",
]
