[project]
name = "voice-agent"
version = "0.1.0"
description = "Simple voice agent using Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[daily]",
    "python-dotenv",
    "openai",
    "deepgram-sdk>=3.2.0,<4.0.0",
    "cartesia",
    "aiohttp",
    "wikipedia>=1.4.0",
    "sounddevice>=0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

